crates/compiler/src/tests/e2e/good/0361_trait_show_dyn_impl_closure/main.gom
trait Show {
    fn show(Self) -> string;
}

struct Num { n: int32 }
impl Show for Num { fn show(self: Num) -> string { self.n.to_string() } }

fn main() {
    let printer = |x: dyn Show| println(Show::show(x));
    printer(Num { n: 42 });
}
